# python-flask-poetry-docker

./: Dockerfile  README.rst  bootstrap.py  docker-compose.yml  hello.py  pyproject.toml  requirements.txt  uwsgi.ini
web_app/: app.py
